--- a/Proyectos♥/ramo-de-tulipanes-rosados/tools/styles.css
+++ b/Proyectos♥/ramo-de-tulipanes-rosados/tools/styles.css
@@ -10,7 +10,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("https://i.imghippo.com/files/uVJj8364QGw.png") no-repeat center center;;
+    background: linear-gradient(135deg, #000000 0%, #0a1128 50%, #001f3f 100%);
 }
 img {
     width: 300px;
@@ -38,7 +38,7 @@ img {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: 0;
+    z-index: -1;
     background: transparent;
     overflow: hidden;
 }
